--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+.logo {
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo:hover {
+  border-radius: 30px;
+  background-color: rgba(201, 201, 201, 0.2);
+}
+.download {
+  width: 20px;
+  border-radius: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.downloadBtn {
+  padding: 0 1rem;
+  color: crimson;
+  border-radius: 10px;
+  border: none;
+  height: 40px;
+  background-color: rgb(249, 161, 178, 0.2);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.close {
+  font-size: 8px;
+  padding: 10px;
+}
+.close:hover {
+  border-radius: 20px;
+  background-color: rgba(201, 201, 201, 0.5);
+}
+.line {
+  width: 100%;
+  display: block;
+  height: 2.5px;
+  background-color: crimson;
+}
+.btn1 {
+  border: 1px solid #444;
+  padding: 5px 15px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.btn1:hover {
+  background-color: #555;
+  color: azure;
+}
+.ul li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #666;
+}
+
+.landing {
+  height: 300px;
+  background-color: #222;
+  color: azure;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.boxCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  color: #888;
+  font-weight: 400;
+}
+.box {
+   height: 200px;
+   background: #000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+   width: 90%;
+   margin: 50px auto;
+   display: flex;
+   justify-content: space-around;
+   flex-wrap: wrap;
+   gap: 2rem;
+}
+
+footer {
+   height: 100px;
+   background-color: #222;
+   color: azure;
+  justify-content: center;
+   display: flex;
+   align-items: center;
+   margin-top: 100px;
+   font-size: 18px;
+}
+.abs {
+   width: 50px;
+   height: 22px;
+   color: azure;
+   background: #222;
+   text-align: center;
+   border-radius: 4px;
+   line-height: 22px;
+   position:absolute;
+   right:10px;
+   font-weight: 500;
+   top:10px;
 }
