--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@
   height: 2.5px;
   background-color: crimson;
 }
+
+li {
+  list-style-type: none;
+}
 .btn1 {
   border: 1px solid #444;
   padding: 5px 15px;
@@ -57,61 +61,76 @@
 
 a {
   text-decoration: none;
-  color: #666;
-}
-
-.landing {
-  height: 300px;
-  background-color: #222;
-  color: azure;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.boxCard {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 28px;
-  color: #888;
-  font-weight: 400;
-}
-.box {
-   height: 200px;
-   background: #000;
-}
-
-main {
-   width: 90%;
-   margin: 50px auto;
-   display: flex;
-   justify-content: space-around;
-   flex-wrap: wrap;
-   gap: 2rem;
+  color: #777;
+  font-weight: 500;
 }
 
 footer {
-   height: 100px;
-   background-color: #222;
-   color: azure;
+  height: 100px;
+  background-color: #222;
+  color: azure;
   justify-content: center;
-   display: flex;
-   align-items: center;
-   margin-top: 100px;
-   font-size: 18px;
+  display: flex;
+  align-items: center;
+  margin-top: 100px;
+  font-size: 18px;
 }
 .abs {
-   width: 50px;
-   height: 22px;
-   color: azure;
-   background: #222;
-   text-align: center;
-   border-radius: 4px;
-   line-height: 22px;
-   position:absolute;
-   right:10px;
-   font-weight: 500;
-   top:10px;
+  width: 50px;
+  height: 22px;
+  color: azure;
+  background: #222;
+  text-align: center;
+  border-radius: 4px;
+  line-height: 22px;
+  position: absolute;
+  right: 10px;
+  font-weight: 500;
+  top: 10px;
+}
+.blogHome {
+  height: 250px;
+  background-color: #ebebeb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.img {
+  height: 180px;
+  background: #9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  color: #666;
+}
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+main {
+  width: 90%;
+  margin: 30px auto;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 1fr 0.5fr;
+}
+
+.box1 {
+  width: 48%;
+}
+.btns {
+  width: 100%;
+  padding: 20px 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.a {
+  color: rgb(0, 99, 228);
+  text-decoration: underline;
+  font-weight: normal;
 }
